# krappebot

./: .env.example  .gitignore  Cargo.toml  README.md
deploy/: krappebot.service
migrations/: 0001_init.sql
src/: config.rs  core.rs  db.rs  irc_bot.rs  lib.rs  main.rs  telegram_bot.rs
